--- a/style.css
+++ b/style.css
@@ -30,7 +30,9 @@ body {
 .teams {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  align-items: flex-start;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .team {
@@ -38,6 +40,8 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
+  width: 100%;
+  max-width: 300px;
 }
 
 .team-name {
@@ -45,7 +49,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 2.5rem;
   font-weight: 700;
-  line-height: 1.2rem;
+  line-height: 1.2;
 }
 
 .score {
@@ -60,3 +64,37 @@ body {
   justify-content: center;
   color: #f94f6d;
 }
+
+.score-btns {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.score-btn {
+  width: 2.8125rem;
+  height: 2.8125rem;
+  border-radius: 0.3125rem;
+  border: 2px solid #9aabd8;
+  background-color: transparent;
+  color: #9aabd8;
+  text-align: center;
+  font-family: 'Cursed Timer ULiL', monospace;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.73825; /* 154.509% */
+  cursor: pointer;
+}
+
+.score-btn:hover {
+  background-color: rgba(154, 171, 216, 0.1);
+  cursor: pointer;
+}
+
+.score-btn:focus {
+  outline: 2px solid #9aabd8;
+  outline-offset: 2px;
+}
+
+
