--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
   margin: 0 auto;
   text-align: center;
   padding: 2.2rem 1.5rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .scoreboard-header h1 {
@@ -97,4 +101,22 @@ body {
   outline-offset: 2px;
 }
 
+.reset-btn {
+  background-color: transparent;
+  padding: 10px 20px;
+  border-radius: 0.3125rem;
+  border: 2px solid #9aabd8;
+  color: #f94f6d;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+}
 
+.reset-btn:focus {
+  outline: 2px solid #9aabd8;
+  outline-offset: 2px;
+}
+
+.reset-btn:hover {
+  background-color: rgba(154, 171, 216, 0.1);
+  cursor: pointer;
+}
